# DartDetection

./: .coverage  .gitignore  License.txt  pyproject.toml  readme.md  requirements.txt
data/calibration_matrices/: calib_cam_left.npz  calib_cam_right.npz  stereo_RT_cl_cr.npz  stereo_RT_cl_cr_2d.npz  stereo_RT_cl_cw_2d.npz
scripts/: colab_train_yolo_dartdetect_model.ipynb
src/dartdetect/: dartboard_geometry.py  dartboardgeometry.py  dartdetection.py  dartlocalize.py  singlecamdartlocalize.py  stereolocalize.py
src/dartdetect/calibration/: calibrationintrinsic.py  calibrationstereo.py  generatecheckerboard.py  relatetotwoddartboard.py  saveandloadcalibdata.py
src/dartdetect/singlecamdartlocalize/: dartclusteranalysis.py  dartmovementutils.py  dartocclusionhandler.py  moveddartocclusion.py  simulationtestutils.py  singlecamlocalize.py
tests/: test_calibratestereo.py  test_dartboardgeometry.py  test_dartdetection.py  test_dartlocalize.py  test_generatecheckerboard.py  test_relatetotwoddartboard.py  test_saveandloadcalibdata.py  test_singlecamdartlocalize.py  test_stereolocalize.py
tests/test_singlecamdartlocalize/: test_dartclusteranalysis.py  test_dartmovementutils.py  test_dartocclusionhandler.py  test_moveddartocclusion.py  test_singlecamlocalize.py
